--- a/src/introduction.tex
+++ b/src/introduction.tex
@@ -6,7 +6,7 @@
 The human language, with its nuances and complexities, presents a significant challenge for machines to understand.
 \ac{NLP} bridges this gap, and at its core lies the critical concept of text representation.
 This process acts as a translator, bridging the gap between the richness of text and the numerical language that machines understand.
-By effectively capturing the meaning within words and their relationships, text representation empowers \ac{NLP} models to leverage capabilities of the \ac{ML}.
+By effectively capturing the meaning within words and their relationships, text representation empowers \ac{NLP} models to leverage the capabilities of \ac{ML}.
 From sentiment analysis to machine translation, this ability to represent meaning fuels the advancements in \ac{NLP}, enabling machines to interact with and decipher human language with ever-increasing accuracy.
 
 \section{Evolution of text representation methods}
@@ -18,12 +18,12 @@ Word embedding techniques (e.g., Word2Vec, \ac{GloVe}, FastText) offered a signi
 However, these techniques primarily focused on local context within a limited window, hindering their ability to capture complex relationships within sentences or documents.
 
 The emergence of deep learning architectures, particularly transformer-based models like \ac{BERT}, revolutionized the field of text representation.
-These models allows to not only understand the meaning of individual words but also consider their interaction and context within a sentence or document.
+These models allow us to not only understand the meaning of individual words but also consider their interaction and context within a sentence or document.
 
 \begin{figure}
-  \centering
+ \centering
   \input{/home/ezvezdov/Programming/NLP/BP/bachelor_thesis/src/fig/tikz/evolution_text_representaion.tex}  
-  \caption{Evolution of the text representation methods.}
+ \caption{Evolution of the text representation methods.}
   \label{fig:ecolution_text_representation}
 \end{figure}
 
